task2/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
  - name: app
    image: kube-app:latest
    imagePullPolicy: Never
    volumeMounts:
    - name: logs-volume
      mountPath: /app/logs
  volumes:
  - name: logs-volume
    emptyDir: {}
