task2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: kube-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5252
